--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "PhD Student in Computational Neuroscience"
   location         : "Milano, Italy"
-  employer         : "Università Commerciale "Luigi Bocconi" "
+  employer         : "Università Commerciale Luigi Bocconi"
   uri              : # URL
   email            : "persia.kamali2@phd.unibocconi.it" 
 
