--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ repository               : "PersiaKamali/persiakamali.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "Profile-image.jpg"
   name             : "Persia Kamali"
   pronouns         : # example: "she/her"  
-  bio              : "PhD Student in Computational Neuroscience"
+  bio              : "PhD Student in Computer Science"
   location         : "Milano, Italy"
   employer         : "Università Luigi Bocconi"
   uri              : # URL
