--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "PersiaKamali/persiakamali.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "image.png"
+  avatar           : "images/WhatsApp Image 2024-09-30 at 18.16.45.jpeg"
   name             : "Persia Kamali"
   pronouns         : # example: "she/her"  
   bio              : "PhD Student in Computer Science"
